syntax = "proto3";

package questions;

service QuestionService {
  rpc SearchQuestions (SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  string query = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message Question {
  string id = 1;
  string type = 2;
  string title = 3;
}

message SearchResponse {
  repeated Question questions = 1;
  int32 total = 2;
}

